Fixed announcement layout bug

--- a/src/app/components/presentational/list-item/list-item.component.css
+++ b/src/app/components/presentational/list-item/list-item.component.css
@@ -1,7 +1,7 @@
 .mat-card {
   margin: 10px;
   padding: 16px;
-  width: 100%;
+  /*width: 90%;*/
 }
 .mat-card-header {
   /* CSS styles go here */
